--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url(/lab3/images/image.jpg);
+    background-image: url(images/image.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
